--- a/src/app/components/cuerpo/cuerpo.component.html
+++ b/src/app/components/cuerpo/cuerpo.component.html
@@ -62,7 +62,7 @@
               <td>{{persona.cedula}}</td>
               <td>{{persona.nombres}}</td>
               <td>{{persona.apellidos}}</td>
-              <td>{{persona.fechaNacimiento}}</td>
+              <td>{{persona.fechaNacimiento | date}}</td>
             </tr>
           </tbody>
         </table>
