--- a/src/app/components/pie/pie.component.html
+++ b/src/app/components/pie/pie.component.html
@@ -1,1 +1,9 @@
-<p>pie works!</p>
+<footer class="bg-dark text-light pt-10">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12" style="text-align: center; align-items: center;">
+          Taller 16/05/2023
+        </div>
+      </div>
+    </div>
+  </footer>
