--- a/src/app/components/cuerpo/cuerpo.component.html
+++ b/src/app/components/cuerpo/cuerpo.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     
-    <form [formGroup]="form" (ngSubmit)="agregarPersona()">
+    <form [formGroup]="form">
         <div class="row">
             <div class="col-lg-3">
                 <div class="form-group pt-5">
